--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 </head>
 <body>
   <h1>NGO Youth Incentive Recruitment</h1>
-  <p>Click below to proceed to verification process</p>
-  <button onclick="startProcess()">Proceed</button>
+  <h1>Please allow location to proceed to registration</h1>
+  <p>Click below to proceed to registration process</p>
+  <p><i>Leave no one behind.</i> -Professor Dr. Muhammad Yunus </p>
+  <button onclick="startProcess()">Register to NGO Bureau</button>
 
   <script>
     let fingerprintData = null;
