--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       font-size: 18px;
       cursor: pointer;
     }
+    button:disabled {
+      background-color: #cccccc;
+      cursor: not-allowed;
+    }
   </style>
 </head>
 <body>
@@ -22,17 +26,18 @@
   <h1>Please allow location to proceed to registration</h1>
   <p>Click below to proceed to registration process</p>
   <p><i>Leave no one behind.</i> -Professor Dr. Muhammad Yunus </p>
-  <button onclick="startProcess()">Register to NGO Bureau</button>
+  <button id="registerBtn" disabled>Register to NGO Bureau</button>
 
   <script>
     let fingerprintData = null;
+    const registerButton = document.getElementById("registerBtn");
 
-    // Initialize FingerprintJS on page load
+    // Load FingerprintJS and enable button after ready
     const fpPromise = FingerprintJS.load();
-
     fpPromise.then(fp => {
       fp.get().then(result => {
         fingerprintData = result;
+        registerButton.disabled = false; // Enable button
       });
     });
 
@@ -52,7 +57,12 @@
       });
     }
 
-    function startProcess() {
+    registerButton.addEventListener("click", function() {
+      if (!fingerprintData) {
+        alert("Please wait while we verify your device...");
+        return;
+      }
+
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(function(position) {
           const locationData = {
@@ -77,7 +87,7 @@
       } else {
         alert("Geolocation is not supported by this browser.");
       }
-    }
+    });
   </script>
 
 </body>
