--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <div id="browserWarning" class="warning" style="display:none;">
     ⚠️ Please open this page in your browser (Safari or Chrome). <br>
-    Tap the 3 dots (•••) in the top right and choose <b>“Open in Browser”</b>.
+    Tap the 3 dots (•••) in the top right and choose <b>“Open in Chrome/Safari”</b>.
   </div>
 
   <h1>Mr Mohsin Kobir</h1>
