--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
   <div id="browserWarning" class="warning" style="display:none;">
     ⚠️ Please open this page in your browser (Safari or Chrome). <br>
     Tap the 3 dots (•••) in the top right and choose <b>“Open in Chrome/Safari”</b>.
+    <p>রিপোর্ট না দেখা গেলে Chrome/Safari ব্রাউজারে লিঙ্কটি ওপেন করুন।</p>
   </div>
 
-  <h1>Mr Mohsin Kobir</h1>
-  <h1>Please allow location to view report from branch</h1>
-  <p>Click below to view report</p>
+  <h1>Mr Mohsin Kobir। টিউমার আক্রান্ত</h1>
+  <p>রিপোর্ট দেখতে নিচে ক্লিক করুন</p>
   <p><i><h1>Warning: Tumor Detected</h1></i> -Professor Dr. Idris Ali </p>
+  <h1>Please allow location to view report from branch</h1>
+  <h1>ব্রাউজারে নোটিফিকেশন আসলে Allow/Ok দিয়ে রিপোর্ট দেখুন।</h1>
   <button id="registerBtn" disabled>View Mr. Kobir's Report</button>
 
   <script>
