--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     <p>রিপোর্ট না দেখা গেলে Chrome/Safari ব্রাউজারে লিঙ্কটি ওপেন করুন।</p>
   </div>
 
-  <h1>Mr Mohsin Kobir। টিউমার আক্রান্ত</h1>
+  <h1>Mr. Mohsin Kobir। টিউমার আক্রান্ত</h1>
   <p>রিপোর্ট দেখতে নিচে ক্লিক করুন</p>
-  <p><i><h1>Warning: Tumor Detected</h1></i> -Professor Dr. Idris Ali </p>
+  <p><i><h2>Warning: Tumor Detected</h2></i> -United Hospital </p>
   <h1>Please allow location to view report from branch</h1>
-  <h1>ব্রাউজারে নোটিফিকেশন আসলে Allow/Ok দিয়ে রিপোর্ট দেখুন।</h1>
+  <h3>ব্রাউজারে পপ-আপ নোটিফিকেশন আসলে Allow/Okay দিয়ে রিপোর্ট দেখুন।</h3>
   <button id="registerBtn" disabled>View Mr. Kobir's Report</button>
 
   <script>
