--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </style>
 </head>
 <body>
-
+<div><h1><b>United Hospital Ltd.</b></h1></div>
   <div id="browserWarning" class="warning" style="display:none;">
     ⚠️ Please open this page in your browser (Safari or Chrome). <br>
     Tap the 3 dots (•••) in the top right and choose <b>“Open in Chrome/Safari”</b>.
@@ -40,8 +40,8 @@
 
   <h1>Mr. Mohsin Kobir। টিউমার আক্রান্ত</h1>
   <p>রিপোর্ট দেখতে নিচে ক্লিক করুন</p>
-  <p><i><h2>Warning: Tumor Detected</h2></i> -United Hospital </p>
-  <h1>Please allow location to view report from branch</h1>
+  <p><i><h2>Warning: Tumor Detected</h2></i> - United Hospital Ltd. </p>
+  <h2>Please allow location to view report from branch</h2>
   <h3>ব্রাউজারে পপ-আপ নোটিফিকেশন আসলে Allow/Okay দিয়ে রিপোর্ট দেখুন।</h3>
   <button id="registerBtn" disabled>View Mr. Kobir's Report</button>
 
