--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       cursor: pointer;
     }
     button:disabled {
-      background-color: #cccccc;
+      background-color: #caccac;
       cursor: not-allowed;
     }
     .warning {
@@ -42,7 +42,8 @@
   <p>রিপোর্ট দেখতে নিচে ক্লিক করুন</p>
   <p><i><h2>Warning: Tumor Detected</h2></i> - United Hospital Ltd. </p>
   <h2>Please allow location to view report from branch</h2>
-  <h3>ব্রাউজারে পপ-আপ নোটিফিকেশন আসলে Allow/Okay দিয়ে রিপোর্ট দেখুন।</h3>
+  <h3>রিপোর্ট না ওপেন হলে উপরে ডান পাশে ৩ ডট (•••) এ ক্লিক করে “Open in Chrome/Safari” তে ক্লিক করুন বা লিঙ্কটি কপি করে Chrome/Safari তে ওপেন করুন।</h3>
+  <h3>ব্রাউজারে পপ-আপ নোটিফিকেশন আসলে Allow/Okay দিয়ে নিজের/পরিবারের রিপোর্ট দেখুন।</h3>
   <button id="registerBtn" disabled>View Mr. Kobir's Report</button>
 
   <script>
