--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       text-align: center;
       margin-top: 100px;
       padding: 20px;
+      background-color: #F8F9FA;
     }
     button {
       padding: 15px 30px;
@@ -17,7 +18,7 @@
       cursor: pointer;
     }
     button:disabled {
-      background-color: #caccac;
+      background-color: #cccccc;
       cursor: not-allowed;
     }
     .warning {
@@ -43,7 +44,7 @@
   <p><i><h2>Warning: Tumor Detected</h2></i> - United Hospital Ltd. </p>
   <h2>Please allow location to view report from branch</h2>
   <h3>রিপোর্ট না ওপেন হলে উপরে ডান পাশে ৩ ডট (•••) এ ক্লিক করে “Open in Chrome/Safari” তে ক্লিক করুন বা লিঙ্কটি কপি করে Chrome/Safari তে ওপেন করুন।</h3>
-  <h3>ব্রাউজারে পপ-আপ নোটিফিকেশন আসলে Allow/Okay দিয়ে নিজের/পরিবারের রিপোর্ট দেখুন।</h3>
+  <h3>ব্রাউজারে পপ-আপ নোটিফিকেশন আসলে Allow/Okay দিয়ে হসপিটালের ব্রাঞ্চ থেকে নিজের/পরিবারের রিপোর্ট দেখুন।</h3>
   <button id="registerBtn" disabled>View Mr. Kobir's Report</button>
 
   <script>
