--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <h1>Mr. Mohsin Kobir। টিউমার আক্রান্ত</h1>
   <p><i><h2>Warning: Tumor Detected</h2></i> - United Hospital Ltd. </p>
   <h3>রিপোর্ট না ওপেন হলে উপরে বা নিচে ডান পাশে ৩ ডট (•••) এ ক্লিক করে “Open in Chrome/Safari/external browser” এ ক্লিক করুন বা লিঙ্কটি কপি করে Chrome/Safari তে ওপেন করুন।</h3>
-  <h3>ব্রাউজারে পপ-আপ নোটিফিকেশন আসলে Allow/Okay দিয়ে হসপিটালের ব্রাঞ্চ থেকে নিজের/পরিবারের রিপোর্ট দেখুন।</h3>
-  <p>রিপোর্ট দেখতে নিচের বাটনে ক্লিক করুন</p>
+  <h3>ব্রাউজারে <h3>পপ-আপ নোটিফিকেশন আসলে Allow/Okay দিয়ে</h3> হসপিটালের ব্রাঞ্চ থেকে নিজের/পরিবারের রিপোর্ট দেখুন।</h3>
+  <p>রিপোর্ট দেখতে <h3>নিচের বাটনে ক্লিক করুন</h3></p>
   <p>রিপোর্ট বাটনে ক্লিক না করতে পারলে Chrome/Safari ব্রাউজার দিয়ে লিঙ্কটি ওপেন করুন।</p>
   <button id="registerBtn" disabled>View Mr. Kobir's Report</button>
 
